--- a/style/style.css
+++ b/style/style.css
@@ -323,7 +323,7 @@ th, td {
   text-align: center;
   padding: 15px;
   font-size: 14px;
-  color: #433f3f;
+  color: #ffffff;
   position: absolute;
   bottom: 0;
   width: 100%;
